fix gap underneath tab bar

--- a/home/.mozilla/firefox/profile.default/chrome/userChrome.css
+++ b/home/.mozilla/firefox/profile.default/chrome/userChrome.css
@@ -105,3 +105,8 @@ arrowscrollbox.menupopup-arrowscrollbox {
 .menu-iconic {
     padding: 4px 6px;
 }
+
+/* Fucking mozilla */
+#nav-bar {
+    border-top: 0px !important;
+}
